package _1_객체_설계._3_설계_개선하기;

public class Ticket {
    private Long fee;

    public Long getFee() {
        return fee;
    }
}
